# avogadro-molfidget

./: README.md  pyproject.toml
src/avogadro_molfidget/: __init__.py  exporter.py  molfidget-options.json
