[project]
name = "avogadro-molfidget"
version = "0.1.0"
description = "Export 3D-printable STL/3MF files from Avogadro using MolFidget"
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
license = "BSD-3-Clause"
dependencies = ["molfidget>=1.2.0"]
requires-python = ">= 3.12"

[project.scripts]
avogadro-molfidget = "avogadro_molfidget:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.2,<0.11.0"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro-molfidget = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.menu-commands]]
identifier = "molfidget"
menu = "File"
submenu = "Export"
item = "MolFidget..."
input-format = "mol"
user-options = "src/avogadro_molfidget/molfidget-options.json"
